# framework-example

./: README.md
apps/jmp_skeleton/: CHANGELOG.md  CMakeLists.txt  application_info.h  application_interface.cpp  jmp-skeleton.ini
apps/jmp_skeleton/app_skeleton/: app_skeleton.cmake  app_skeleton.cpp  app_skeleton.h  app_skeleton_imp.cpp  app_skeleton_imp.h
libraries/: gcc.h  libraries.cmake  libs.h
libraries/application_interface/: CHANGELOG.md  application_interface.h  application_interface_version.h
libraries/application_interface/source/: application_interface.h
libraries/lib_defines/: CHANGELOG.md  lib_defines.h  lib_defines_version.h
libraries/lib_file/: CHANGELOG.md  lib_file.cpp  lib_file.h  lib_file_version.h
libraries/lib_imu/: CHANGELOG.md  lib_imu.cpp  lib_imu.h  lib_imu_version.h
libraries/lib_json/: CHANGELOG.md  lib_json.cpp  lib_json.h  lib_json_version.h
libraries/lib_messaging/: CHANGELOG.md  lib_messaging.cpp  lib_messaging.h  lib_messaging_version.h
libraries/lib_mqtt/: CHANGELOG.md  lib_mqtt.cpp  lib_mqtt.h  lib_mqtt_version.h
libraries/lib_ncurses/: CHANGELOG.md  lib_ncurses.cpp  lib_ncurses.h  lib_ncurses_version.h
libraries/lib_serial/: CHANGELOG.md  lib_serial.cpp  lib_serial.h  lib_serial_version.h
libraries/lib_system/: CHANGELOG.md  lib_system.cpp  lib_system.h  lib_system_version.h
libraries/lib_time/: CHANGELOG.md  lib_time.cpp  lib_time.h  lib_time_version.h
modules/: modules.cmake  modules.h
modules/mod_application/: CHANGELOG.md  mod_application.cpp  mod_application.h
modules/mod_debug/: CHANGELOG.md  application_info.h  mod_debug.cpp  mod_debug.h
modules/mod_gprs/: CHANGELOG.md  application_info.h  mod_gprs.cpp  mod_gprs.h
modules/mod_gps/: CHANGELOG.md  application_info.h  mod_gps.cpp  mod_gps.h
modules/mod_io/: CHANGELOG.md  application_info.h  mod_io.cpp  mod_io.h
modules/mod_mongodb/: CHANGELOG.md  application_info.h  mod_mongodb.cpp  mod_mongodb.h
modules/mod_mqtt_client/: CHANGELOG.md  application_info.h  mod_mqtt_client.cpp  mod_mqtt_client.h
modules/mod_notifications/: CHANGELOG.md  application_info.h  mod_notifications.cpp  mod_notifications.h
modules/mod_puppet_device/: CHANGELOG.md  application_info.h  mod_puppet_device.cpp  mod_puppet_device.h
modules/mod_skeleton/: CHANGELOG.md  application_info.h  mod_skeleton.cpp  mod_skeleton.h
modules/mod_synthesizer/: CHANGELOG.md  application_info.h  mod_synthesizer.cpp  mod_synthesizer.h
(+82 files in other folders)
